--- a/assets/css/base/_fonts.css
+++ b/assets/css/base/_fonts.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap');
+
 :root, :host {
   --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Free"; }
 
