style: including a nav-bar into code, and styles css

--- a/assets/css/components/__logo.css
+++ b/assets/css/components/__logo.css
@@ -8,22 +8,22 @@
         background: url('../../imgs/logo.svg') no-repeat;
         display: inline-block;
         background-size: 105%;
-        height: 4rem; /* 40px */
-        width: 7.5rem; /* 70px */
+        height: 3rem; /* 40px */
+        width: 4.935rem; /* 70px */
 }
 
 @media  screen and (max-width: 1024px) {
     .logo {
-        margin-left: 2.2rem;
-        padding-top: 2.0rem;
+        margin-left: 2rem;
+        padding-top: 1.6rem;
     }
     .logo__link {
-        height: 3.2rem;
-        width: 5.8rem;
+        height: 2.5rem;
+        width: 4rem;
     }
 }
 
-@media  screen and (min-width: 1920px) {
+/* @media  screen and (min-width: 1920px) {
     .logo {
         margin-left: 7.2rem;
         padding-top: 3.2rem;
@@ -32,4 +32,4 @@
         height: 8rem;
         width: 15rem;
     }
-}
+} */
